tests/non-exhaustive-patterns.chg.stderr
internal compiler error: no check block to jump to if this arm fails

        Unnested::B => return 2
                  ^^^^^^^^^^^^^

note: backtrace:



